# qmk-ambience

./: README.md
client/: Cargo.toml
client/src/: color.rs  command_parsing.rs  hid.rs  main.rs
client/src/color/: algorithms.rs  color.rs  mod.rs  types.rs
firmware/: keymap.c
