[package]
name = "qmk-ambience-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
benchmark = []

[dependencies]
gumdrop = "0.8.1" # For argument parsing
hidapi = "2.4.1" # For sending colors to the keyboard
x11 = { version = "2.21.0", features = ["xlib"] } # To get the colors from your screen
